# practica2_repo1

./: .gitignore  README.md  practica2_notebook.ipynb  pyproject.toml
models/: filter.pkl  practica2_model.pkl  preprocessor.pkl
src/models/: model_wrapper.py
src/preprocessing/: base_preprocessing.py
