[project]
name = "practica2-modelado"
version = "1.0.0"
description = "Practica 2 Repo 1 - Optimizacion, Calibracion e Incertidumbre"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "feature-engine>=1.9.4",
    "ipykernel>=7.2.0",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mapie>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "optuna-integration[lightgbm,xgboost]>=4.8.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skrub>=0.3.0",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
